<resources>
    <string name="app_name">XYZ Reader</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_quotes">Quotes</string>
    <string name="menu_jokes">Jokes</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
